--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "next-contentlayer",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "preview": "next build && next start",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "@keystatic/templates-nextjs",
+  "version": "0.0.62",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Thinkmill/keystatic/",
+    "directory": "templates/nextjs"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "@vercel/analytics": "^1.0.0",
-    "autoprefixer": "10.4.14",
-    "contentlayer": "^0.3.2",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.4.1",
-    "next-contentlayer": "^0.3.2",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "@markdoc/markdoc": "^0.4.0",
+    "next": "^15.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@keystatic/core": "^0.5.48",
+    "@keystatic/next": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.8",
+    "typescript": "^5.5.3"
+  },
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "start": "next start"
   }
 }
