--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "directory": "templates/nextjs"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@keystatic/core": "^0.5.48",
     "@keystatic/next": "^5.0.4",
     "@markdoc/markdoc": "^0.4.0",
+    "gsap": "^3.14.2",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
